com.utilities.extensions 1.0.0
Initial Release :rocket:

--- a/Utilities.Extensions/Packages/com.utilities.extensions/Editor/Utilities.Extensions.Editor.asmdef
+++ b/Utilities.Extensions/Packages/com.utilities.extensions/Editor/Utilities.Extensions.Editor.asmdef
@@ -1,8 +1,12 @@
 {
-    "name": "ProjectScope.ProjectName",
-    "rootNamespace": "ProjectScope.ProjectName",
-    "references": [],
-    "includePlatforms": [],
+    "name": "Utilities.Extensions.Editor",
+    "rootNamespace": "Utilities.Extensions.Editor",
+    "references": [
+        "Utilities.Extensions"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
