--- a/Utilities.Extensions/Packages/com.utilities.extensions/Runtime/Utilities.Extensions.asmdef
+++ b/Utilities.Extensions/Packages/com.utilities.extensions/Runtime/Utilities.Extensions.asmdef
@@ -1,12 +1,8 @@
 {
-    "name": "ProjectScope.ProjectName.Editor",
-    "rootNamespace": "ProjectScope.ProjectName.Editor",
-    "references": [
-        "ProjectScope.ProjectName"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "name": "Utilities.Extensions",
+    "rootNamespace": "Utilities.Extensions",
+    "references": [],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
