--- a/Utilities.Extensions/Packages/com.utilities.extensions/package.json
+++ b/Utilities.Extensions/Packages/com.utilities.extensions/package.json
@@ -5,12 +5,12 @@
   "keywords": [],
   "version": "1.0.0",
   "unity": "2021.3",
-  "documentationUrl": "https://github.com/StephenHodgson/com.utilities.extensions#documentation",
-  "changelogUrl": "https://github.com/StephenHodgson/com.utilities.extensions/releases",
+  "documentationUrl": "https://github.com/RageAgainstThePixel/com.utilities.extensions#documentation",
+  "changelogUrl": "https://github.com/RageAgainstThePixel/com.utilities.extensions/releases",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "repository": "https://github.com/StephenHodgson/com.utilities.extensions.git"
+    "repository": "https://github.com/RageAgainstThePixel/com.utilities.extensions.git"
   },
   "author": {
     "name": "StephenHodgson",
