--- a/.github/workflows/upm-subtree-split.yml
+++ b/.github/workflows/upm-subtree-split.yml
@@ -8,15 +8,16 @@ jobs:
   upm-subtree-split:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
     - name: upm subtree split
       run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
         $packageDir = Get-Item -Path "**/Packages/com.*" | Select-Object -ExpandProperty FullName
         $packageDir = $packageDir.replace('${{ github.workspace }}/','')
         Write-Host $packageDir
         git subtree split --prefix="$packageDir" -b upm
         git push -u origin upm --force
-      working-directory: ${{ github.workspace }}
-      shell: pwsh
