--- a/Utilities.Extensions/Packages/manifest.json
+++ b/Utilities.Extensions/Packages/manifest.json
@@ -7,7 +7,8 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.ugui": "1.0.0",
-    "com.utilities.async": "2.1.6",
+    "com.utilities.async": "2.1.7",
+    "com.utilities.buildpipeline": "1.4.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
