--- a/Utilities.Extensions/Packages/com.utilities.extensions/package.json
+++ b/Utilities.Extensions/Packages/com.utilities.extensions/package.json
@@ -3,7 +3,7 @@
   "displayName": "Utilities.Extensions",
   "description": "Common extensions for Unity types (UPM)",
   "keywords": [],
-  "version": "1.2.1",
+  "version": "1.3.0",
   "unity": "2021.3",
   "documentationUrl": "https://github.com/RageAgainstThePixel/com.utilities.extensions#documentation",
   "changelogUrl": "https://github.com/RageAgainstThePixel/com.utilities.extensions/releases",
@@ -20,7 +20,6 @@
     "registry": "https://package.openupm.com"
   },
   "dependencies": {
-    "com.unity.modules.physics": "1.0.0",
-    "com.unity.ugui": "1.0.0"
+    "com.unity.modules.physics": "1.0.0"
   }
 }
