--- a/Editor/Utilities.Extensions.Editor.asmdef
+++ b/Editor/Utilities.Extensions.Editor.asmdef
@@ -13,6 +13,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.ugui",
+            "expression": "1.0.0",
+            "define": "UNITY_UGUI"
+        }
+    ],
     "noEngineReferences": false
 }
