--- a/Runtime/Utilities.Extensions.asmdef
+++ b/Runtime/Utilities.Extensions.asmdef
@@ -9,6 +9,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.ugui",
+            "expression": "1.0.0",
+            "define": "UNITY_UGUI"
+        }
+    ],
     "noEngineReferences": false
 }
