--- a/Utilities.Extensions/Packages/com.utilities.extensions/package.json
+++ b/Utilities.Extensions/Packages/com.utilities.extensions/package.json
@@ -3,14 +3,14 @@
   "displayName": "Utilities.Extensions",
   "description": "Common extensions for Unity types (UPM)",
   "keywords": [],
-  "version": "1.3.0",
+  "version": "1.3.1",
   "unity": "2021.3",
   "documentationUrl": "https://github.com/RageAgainstThePixel/com.utilities.extensions#documentation",
   "changelogUrl": "https://github.com/RageAgainstThePixel/com.utilities.extensions/releases",
   "license": "MIT",
   "repository": {
-    "type": "git",
-    "repository": "https://github.com/RageAgainstThePixel/com.utilities.extensions.git"
+    "url": "https://github.com/RageAgainstThePixel/com.utilities.extensions.git",
+    "type": "git"
   },
   "author": {
     "name": "Stephen Hodgson",
